--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body bg="http://static.tumblr.com/17d25d5c41cbc00df1e0a9b6a4d75694/jucbguh/P7xntmsrp/tumblr_static_aeg19qd13h4cw04cwog4skows.png">
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
