--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <style>
 body  {
-    background-image: url("http://i.imgur.com/0P0Wkti.png");
+    background-image: url("");
     background-color: #cccccc;
 }
 </style>
